// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox should render a Checkbox 1`] = `
<div
  className="tc-checkbox checkbox"
>
  <label
    htmlFor="id"
  >
    <input
      checked={false}
      disabled={false}
      id="id"
      onChange={[Function]}
      type="checkbox"
    />
    <span>
      
    </span>
  </label>
</div>
`;

exports[`Checkbox should render a Checkbox with label 1`] = `
<div
  className="tc-checkbox checkbox"
>
  <label
    htmlFor="id"
  >
    <input
      checked={false}
      disabled={false}
      id="id"
      onChange={[Function]}
      type="checkbox"
    />
    <span>
      some label
    </span>
  </label>
</div>
`;

exports[`Checkbox should render a checked Checkbox 1`] = `
<div
  className="tc-checkbox checkbox"
>
  <label
    htmlFor="id"
  >
    <input
      checked={true}
      disabled={false}
      id="id"
      onChange={[Function]}
      type="checkbox"
    />
    <span>
      
    </span>
  </label>
</div>
`;

exports[`Checkbox should render a disabled Checkbox 1`] = `
<div
  className="tc-checkbox checkbox"
>
  <label
    htmlFor="id"
  >
    <input
      checked={false}
      disabled={true}
      id="id"
      onChange={[Function]}
      type="checkbox"
    />
    <span>
      
    </span>
  </label>
</div>
`;
